specs/020-map-set-tuples/examples/invalid/tuple-length.ts
let p: [int, string] = [1, "a", 3];
console.log(p[0]);
